// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoLag eSFTFK"
>
  <li
    className="sc-fzoXzr egSwkv"
    onClick={[Function]}
  >
    <span
      className="sc-fzocqA cbkYiI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoXzr egSwkv"
    onClick={[Function]}
  >
    <span
      className="sc-fzocqA cbkYiI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoXzr egSwkv"
    onClick={[Function]}
  >
    <span
      className="sc-fzocqA cbkYiI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoLag eSFTFK"
>
  <li
    className="sc-fzoXzr hQMnqP"
    onClick={[Function]}
  >
    <span
      className="sc-fzocqA cbkYiI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoXzr hQMnqP"
    onClick={[Function]}
  >
    <span
      className="sc-fzocqA cbkYiI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoXzr hQMnqP"
    onClick={[Function]}
  >
    <span
      className="sc-fzocqA cbkYiI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
